# Huginn

./: .gitignore  LICENSE  README.md  ROADMAP.md  install.sh  pyproject.toml
ai_blocker/: app.py  config.py  hosts.py  main.py  monitor.py
huginn/: app.py  config.py  hosts.py  main.py  monitor.py
tests/: test_app.py  test_config.py  test_hosts.py  test_monitor.py
